--- a/Capstone.html
+++ b/Capstone.html
@@ -46,7 +46,7 @@
 								<!-- Text stuff -->
 									<header>
 										<h2>Project Details</h2>
-										<p>Worked in groups of 5.</p>
+									
 									</header>
 									<p>Yogi Tea is one of America's largest tea companies. They price their tea at a premium and are sold
 										nationwide. We were asked to help find the following information for Yogi Tea:</p>
@@ -64,7 +64,7 @@
 									<header>
 										<h3>Download project details below</h3>
 										<p>Due to an NDA agreement, we are not permitted to disclose any specific findings or data we worked with. The below links are empty. Limited details can be shared per request.</p>
-										<p>Ultimately, we constructed a linear regression model (that accounted for seasonality, geography, and more), and 4 different sets of code to compute elasticity coefficients for general price, TPR (total price reduction), Feature promotions, and Display promotions. These things helped us provide valuable insights into the companies pricing and promotional tactis in different locations throughout the US.</p>
+										<p>Ultimately, we constructed a linear regression model (that accounted for seasonality, geography, and more), and 4 different sets of code to compute elasticity coefficients for 4 major price effecting factors. These things helped us provide valuable insights into the companies pricing and promotional tactics in different locations throughout the US.</p>
 									</header>
 									<a href="" download>Link to final project report</a>
 									<p></p>
