--- a/DB Hackathon.html
+++ b/DB Hackathon.html
@@ -42,7 +42,7 @@
 								<!-- Text stuff -->
 									<header>
 										<h2>Project Details</h2>
-										<p>Worked in groups of four, received 1 hour to complete 4 questions (1 question per person). Each person was responsible for one question but by the end of it we all helped on every problem. </p>
+										<p>Received 1 hour to complete 4 questions (1 question per person). Each person was responsible for one question but by the end of it we all helped on every problem. </p>
 									</header>
 									<p>The goal of the project was to use SQL scripting to query and manipulate a database containing information about various trees. The objective was to complete a set of specified tasks within a one-hour time frame and submit the resulting SQL script, demonstrating proficiency in SQL skills. I was responsible for question 1 in this competition.</p>
 									
