--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="#">Real Estate Deal Memo/Investment Pitch</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/RE.jpg" alt="" /></a>
+									<p>Tools: Excel, Online Data Resources</p>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="COVID.html" class="button">Code/Details</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="#">Heart Disease Analysis</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/heart.jpg" alt="" /></a>
@@ -122,17 +133,7 @@
 										<li><a href="NFLDraft.html" class="button">Code/Details</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<h2><a href="#">Covid 19 Impact Analysis</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/covid.jpg" alt="" /></a>
-									<p>Tools: R</p>
-									<p></p>
-									<ul class="actions special">
-										<li><a href="COVID.html" class="button">Code/Details</a></li>
-									</ul>
-								</article>
+								
 								<article>
 									<header>
 										<h2><a href="#">Dating Algorithm Analysis for Tinder</a></h2>
